# ros_restaurant

./: README.md  restaurant.uml  test_restaurant.pu
cerebrum/: package.xml  restaurant.py  setup.cfg  setup.py
cerebrum/launch/: restaurant.launch.py
control/: package.xml
control_system/: CMakeLists.txt  control_system.cpp  get_distance.py  localization.py  package.xml  setup.py  turn.py
control_system/test/: test_rione_msgs.cpp
image/: package.xml  setup.py
image_system/: CMakeLists.txt  image_system.py  package.xml  setup.cfg  setup.py
image_system/include/image_system/: image_system.hpp
image_system/src/: image_system.cpp  image_system_node.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
sound/: package.xml  setup.cfg  setup.py
sound_system/: package.xml  setup.cfg  setup.py  sound_system.py
sound_system/dictionary/: take_the_order.dict  take_the_order.gram
sound_system/module/: module_angular.py  module_distance.py  module_restaurant.py
spr_cic/: package.xml  restaurant_CIC.py  setup.cfg  setup.py
spr_cic/launch/: CIC.launch.py
